--- a/src/main/resources/templates/addproduct.html
+++ b/src/main/resources/templates/addproduct.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="ISO-8859-1">
+    <title>[[${pagetitle}]]</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
+<!-- create navigation bar ( header) -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed"
+                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" th:href="@{/}">[[${pagetitle}]]</a>
+        </div>
+    </div>
+</nav>
+
+<br>
+<br>
+<!-- Create HTML registration form -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+
+            <!-- success message -->
+            <div th:if="${message}">
+                <div class="alert alert-info">
+<!--                    <p th:text="${message}"></p>-->
+                    [[${message}]]
+                </div>
+            </div>
+            <!-- success message -->
+            <div th:if="${error}">
+                <div class="alert alert-info">
+                    [[${error}]]
+                </div>
+            </div>
+
+            <h1>[[${pagetitle}]]</h1>
+
+            <form th:action="@{/addNewProduct}" method="POST" th:object="${product}">
+                <input type="hidden" th:field="*{productId}">
+                <div class="form-group">
+                    <label class="control-label" for="productName"> Product Name </label>
+                    <input id="productname" class="form-control" th:field="*{productName}"
+                           required autofocus="autofocus"/>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="description">Description </label> <input
+                        id="description" class="form-control" th:field="*{description}"
+                        required autofocus="autofocus"/>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="discount"> Discount </label> <input id="discount" class="form-control"
+                                                                                    th:field="*{discount}" required
+                                                                                    autofocus="autofocus"/>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="price"> Price </label> <input
+                        id="price" class="form-control" type="number"
+                        th:field="*{price}" required autofocus="autofocus"/>
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success">Add Product</button>
+                    <span>Already registered? <a href="/" th:href="@{/}">Cancel</a></span>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
