--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -20,16 +20,16 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Add Products</a>
+                <a class="nav-link" th:href="@{/productform}">Add Products</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Delete Product</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Update Product</a>
+                <a class="nav-link" th:href="@{/updateProductForm}">Update Product</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">View Product</a>
+                <a class="nav-link" th:href="@{/dispayAllProduct}">View Product</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/users}">Manage Users</a>
@@ -41,6 +41,10 @@
         </form>
     </div>
 </nav>
+
+<div>
+    <h1>WELCOME TO ADMIN PORTAL</h1>
+</div>
 
 </body>
 </html>
